<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >






        <TextView
            android:id="@+id/labelphonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelchildnum"
            android:textAppearance="?android:attr/textAppearanceMedium" />




        <EditText
            android:id="@+id/txphonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >



                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/getfromchild" />

            </LinearLayout>

        </LinearLayout>




        <Button
            android:id="@+id/bgetchildlocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showchildlocation" />




        <Button
            android:id="@+id/brecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record" />




        <Button
            android:id="@+id/bgetphoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getphoto" />




        <Button
            android:id="@+id/brunningapps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getrunningapps" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    </LinearLayout>

</LinearLayout>